2015-06-03  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.0-beta7 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.0-beta7 final changes'
	git tag -a 4.5.0-beta7 -m 'Version 4.5.0-beta7 tag: Supports 1D->1D, 1D->2D, 2D->1D, and 2D->2D regridding for any unstructured 1D grid and any rectangular 2D grid';git push --tags

	* Write coordinates attribute after all others, fix lat metadata

	* Do second sweep for associated CF variables when creating extraction list

	* Correct bounds names to vertices for 1D output grids

	* Verified ne30->ne120 works and perfectly conserves FSNT

	* Verified fv129x256->fv257x512 works and perfectly conserves FSNT

	* Complete grid description and metadata decoration for 2D->2D mappings

	* Annotate lat and lon variables with "axis = X/Y" attributes

	* Annotate variables with "coordinates" attribute for auxiliary coordinate variables lat and lon

	* Complete grid description for 2D->1D remappings, use nv and vertices instead of nbnd and bounds

2015-06-02  Charlie Zender  <zender@uci.edu>

	* Dogfood?

	* NCO 4.5.0-beta6 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.0-beta6 final changes'
	git tag -a 4.5.0-beta6 -m 'Version 4.5.0-beta6 tag: Gaussian and equiangular offset grids';git push --tags

	* Verified ne30->T42 works and conserves perfectly

	* Gaussian grid diagnosis works

	* Fix numerical bugs in nco_lat_wgt_gss(): fabs() != abs()

2015-06-01  Charlie Zender  <zender@uci.edu>

	* Reverse latitudes and weight generated for Gaussian grids from N->S to S->N

2015-05-31  Charlie Zender  <zender@uci.edu>

	* Add Gaussian grid detection and required functions nco_lat_wgt_gss() and nco_bsl_zero()

	* Improve ncdismember documentation

	* Fuzzy test for latitude weight normalization

	* Move bitmask() and around() routines from nco_var_rth.[ch] to nco_ppc.[ch]

	* Infrastructure for detecting correct type of latitude grid

2015-05-30  Charlie Zender  <zender@uci.edu>

	* Clarify Conventions warnings
